--- a/Info.plist
+++ b/Info.plist
@@ -8,6 +8,7 @@
 		<string>Bug</string>
 		<string>Joystick</string>
 		<string>Rectangle</string>
+		<string>PEmitter</string>
 	</array>
 </dict>
 </plist>
